# mywidgets

./: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
zcui/: CMakeLists.txt  cscrollstyle.cpp  cscrollstyle.h  global.h  logger.cpp  logger.h  popupwidget.cpp  popupwidget.h  singleapplication.cpp  singleapplication.h  switchbutton.cpp  switchbutton.h
